--- a/xs.html
+++ b/xs.html
@@ -53,7 +53,7 @@
                 </form>
                 <div class="bottom-link">
                     YOU DONT HAVE AN ACCOUNT?!?! YOU MUST BE NEW
-                    <a href="#" id="signup-link">Signup</a>
+                    <a href="#" id="signup-link">Sign Up</a>
                 </div>
             </div>
         </div>
