--- a/ees.html
+++ b/ees.html
@@ -38,7 +38,7 @@
                 <p>Login to stay connected with us.</p>
             </div>
             <div class="form-content">
-                <h2>LOGIN</h2>
+                <h2>LOG IN</h2>
                 <form action="#">
                     <div class="input-field">
                         <input type="text" required>
@@ -60,10 +60,10 @@
         <div class="form-box signup">
             <div class="form-details">
                 <h2>Create Account</h2>
-                <p>Sin up please</p>
+                <p>Sign up please</p>
             </div>
             <div class="form-content">
-                <h2>SIGNUP</h2>
+                <h2>SIGN UP</h2>
                 <form action="#">
                     <div class="input-field">
                         <input type="text" required>
@@ -84,7 +84,7 @@
                 </form>
                 <div class="bottom-link">
                     Already have an account? 
-                    <a href="#" id="login-link">Login</a>
+                    <a href="#" id="login-link">Log In</a>
                 </div>
             </div>
         </div>
